--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-"My website to projects" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ygal Idan - DevOps Engineer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="hero">
+    <div class="container">
+      <h1>Ygal Idan - Portfolio</h1>
+      <p>Aspiring DevOps Engineer with a solid foundation in cloud infrastructure, automation, and CI/CD processes acquired through
+        intensive coursework.
+        <br>Currently pursuing AWS Solution Architect certification as part of an advanced DevOps course, with
+        hands-on project experience in tools like Docker, Kubernetes, Jenkins, and Ansible.
+        <br>I am highly motivated to develop my skills further, contribute to innovative projects, and continuously learn and grow within the DevOps field.</p>
+    </div>
+  </header>
+
+  <main>
+    <section id="projects" class="projects">
+      <h2>My Projects</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Telegram Bot</h3>
+          <p>This project showcases a Telegram bot capable of analyzing images sent to it.
+            Using the YOLOv5 AI model, the bot detects objects in the image and returns a list of identified objects to the user.
+            The project demonstrates advanced DevOps capabilities, including infrastructure provisioning as code (IaC) in AWS using Terraform.
+            The connection process is managed with Ansible, which connects to each EC2 instance and deploys the relevant Docker container,
+            whether it is the AI model or the Telegram bot server.</p>
+          <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line</p>
+          <div class="technologies">
+            <img src="https://icon.icepanel.io/Technology/svg/AWS.svg" alt="AWS" title="AWS">
+            <img src="https://icon.icepanel.io/Technology/svg/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
+            <img src="https://icon.icepanel.io/Technology/svg/Ansible.svg" alt="Ansible" title="Ansible">
+            <img src="https://icon.icepanel.io/Technology/svg/Docker.svg" alt="Docker" title="Docker">
+            <img src="https://icon.icepanel.io/Technology/svg/GitHub.svg" alt="GitHub Actions" title="GitHub Actions">
+            <img src="https://icon.icepanel.io/Technology/svg/Linux.svg" alt="Linux" title="Linux">
+          </div>
+          <a href="https://github.com/YgalIdan/BotTelegram" target="_blank" class="btn-primary">View on GitHub</a>
+        </div>
+        
+        <div class="card">
+          <h3>Docker Statistics</h3>
+          <div class="technologies">
+            <img src="images/python-logo.png" alt="Python" title="Python">
+            <img src="images/kubernetes-logo.png" alt="Kubernetes" title="Kubernetes">
+          </div>
+          <p>Tool for analyzing and managing Docker images.</p>
+          <p><strong>Tools:</strong> Python, Kubernetes</p>
+          <a href="https://github.com/your-repo-link" target="_blank" class="btn-primary">View on GitHub</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="resume" class="resume">
+      <h2>Resume</h2>
+      <p>Download my resume to learn more about my professional background.</p>
+      <a href="resume.pdf" download class="btn-primary">Download Resume (PDF)</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Your Name. All rights reserved.</p>
+  </footer>
+</body>
+</html>
