--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
           <a href="https://github.com/YgalIdan/BotTelegram" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
         
-        <div class="card">
+        <!-- <div class="card">
           <h3>Docker Statistics</h3>
+          <p>Tool for analyzing and managing Docker images.</p>
+          <p><strong>Technologies used:</strong> Python, Kubernetes</p>
           <div class="technologies">
             <img src="images/python-logo.png" alt="Python" title="Python">
             <img src="images/kubernetes-logo.png" alt="Kubernetes" title="Kubernetes">
           </div>
-          <p>Tool for analyzing and managing Docker images.</p>
-          <p><strong>Tools:</strong> Python, Kubernetes</p>
           <a href="https://github.com/your-repo-link" target="_blank" class="btn-primary">View on GitHub</a>
-        </div>
+        </div> -->
       </div>
     </section>
 
     <section id="resume" class="resume">
       <h2>Resume</h2>
       <p>Download my resume to learn more about my professional background.</p>
-      <a href="resume.pdf" download class="btn-primary">Download Resume (PDF)</a>
+      <a href="Ygal Idan CV.pdf" download class="btn-primary">Download my CV</a>
     </section>
   </main>
 
