--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <p>&copy; 2024 Ygal Idan. All rights reserved.</p>
   </footer>
 </body>
 </html>
