--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <br>Currently pursuing AWS Solution Architect certification as part of an advanced DevOps course, with
         hands-on project experience in tools like Docker, Kubernetes, Jenkins, and Ansible.
         <br>I am highly motivated to develop my skills further, contribute to innovative projects, and continuously learn and grow within the DevOps field.</p>
+        <div class="social-buttons">
+            <a href="https://www.github.com/YgalIdan" target="_blank" class="social-button github">GitHub</a>
+            <a href="https://www.linkedin.com/in/YgalIdan" target="_blank" class="social-button linkedin">LinkedIn</a>
+          </div>
     </div>
   </header>
 
