--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
     </section>
 
     <section id="resume" class="resume">
-      <h2>Resume</h2>
-      <p>Download my resume to learn more about my professional background.</p>
-      <a href="Ygal Idan CV.pdf" download class="btn-primary">Download my CV</a>
+        <center>
+            <h2>Resume</h2>
+            <img src="Ygal Idan CV.png" alt="CV" title="CV">
+            <br>
+            <a href="Ygal Idan CV.pdf" download class="btn-primary">Download my CV</a>
+        </center>
     </section>
   </main>
 
