--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     <section id="resume" class="resume">
         <center>
             <h2>Resume</h2>
-            <img src="Ygal Idan CV.png" alt="CV" title="CV">
+            <div class="cv">
+                <img src="Ygal Idan CV.png" alt="CV" title="CV">
+            </div>
             <br>
             <a href="Ygal Idan CV.pdf" download class="btn-primary">Download my CV</a>
         </center>
