--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             whether it is the AI model or the Telegram bot server.</p>
           <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line</p>
           <div class="technologies">
-            <img src=".photos/AWS.svg" alt="AWS" title="AWS">
-            <img src=".photos/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
-            <img src=".photos/Ansible.svg" alt="Ansible" title="Ansible">
-            <img src=".photos/Docker.svg" alt="Docker" title="Docker">
-            <img src=".photos/GitHub.svg" alt="GitHub Actions" title="GitHub Actions">
-            <img src=".photos/Linux.svg" alt="Linux" title="Linux">
+            <img src="./.photos/AWS.svg" alt="AWS" title="AWS">
+            <img src="./.photos/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
+            <img src="./.photos/Ansible.svg" alt="Ansible" title="Ansible">
+            <img src="./.photos/Docker.svg" alt="Docker" title="Docker">
+            <img src="./.photos/GitHub.svg" alt="GitHub Actions" title="GitHub Actions">
+            <img src="./.photos/Linux.svg" alt="Linux" title="Linux">
           </div>
           <a href="https://github.com/YgalIdan/BotTelegram" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
