--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             whether it is the AI model or the Telegram bot server.</p>
           <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line</p>
           <div class="technologies">
-            <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/AWS.svg" alt="AWS" title="AWS">
+            <img src=".photos/AWS.svg" alt="AWS" title="AWS">
             <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
             <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/Ansible.svg" alt="Ansible" title="Ansible">
             <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/Docker.svg" alt="Docker" title="Docker">
