--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             whether it is the AI model or the Telegram bot server.</p>
           <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line</p>
           <div class="technologies">
-            <img src=".photos/AWS.svg" alt="AWS" title="AWS">
-            <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
-            <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/Ansible.svg" alt="Ansible" title="Ansible">
-            <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/Docker.svg" alt="Docker" title="Docker">
-            <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/GitHub.svg" alt="GitHub Actions" title="GitHub Actions">
-            <img src="https://github.com/YgalIdan/YgalIdan.github.io/blob/main/.photos/Linux.svg" alt="Linux" title="Linux">
+            <img src="https://icon.icepanel.io/Technology/svg/AWS.svg" alt="AWS" title="AWS">
+            <img src="https://icon.icepanel.io/Technology/svg/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
+            <img src="https://icon.icepanel.io/Technology/svg/Ansible.svg" alt="Ansible" title="Ansible">
+            <img src="https://icon.icepanel.io/Technology/svg/Docker.svg" alt="Docker" title="Docker">
+            <img src="https://icon.icepanel.io/Technology/svg/GitHub.svg" alt="GitHub Actions" title="GitHub Actions">
+            <img src="https://icon.icepanel.io/Technology/svg/Linux.svg" alt="Linux" title="Linux">
           </div>
           <a href="https://github.com/YgalIdan/BotTelegram" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
