--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <div class="grid">
         <div class="card">
           <h3>Telegram Bot</h3>
-          <p>This project showcases a Telegram bot capable of analyzing images sent to it.
-            Using the YOLOv5 AI model, the bot detects objects in the image and returns a list of identified objects to the user.
-            The project demonstrates advanced DevOps capabilities, including infrastructure provisioning as code (IaC) in AWS using Terraform.
-            The connection process is managed with Ansible, which connects to each EC2 instance and deploys the relevant Docker container,
-            whether it is the AI model or the Telegram bot server.</p>
-          <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line</p>
+          <p>This project showcases a <b>Telegram bot</b> capable of analyzing images sent to it.
+            Using the <b>YOLOv5 AI model</b>, the bot detects objects in the image and returns a list of identified objects to the user.
+            The project demonstrates advanced <b>DevOps</b> capabilities, including <b>infrastructure provisioning as code (IaC)</b> in <b>AWS</b> using <b>Terraform</b>.
+            The connection process is managed with <b>Ansible</b>, which connects to each <b>EC2 instance</b> and deploys the relevant <b>Docker container</b>,
+            whether it is the AI model or the <b>Telegram bot server</b>.</p>
+          <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line.</p>
           <div class="technologies">
             <img src="https://icon.icepanel.io/Technology/svg/AWS.svg" alt="AWS" title="AWS">
             <img src="https://icon.icepanel.io/Technology/svg/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
@@ -46,6 +46,27 @@
           <a href="https://github.com/YgalIdan/BotTelegram" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
         
+        <div class="card">
+          <h3>Disko</h3>
+          <p>The <b>Disko Project</b>, developed in collaboration with <b>Octopus Computer Solutions</b>, provides an efficient solution for managing <b>Docker Images</b> in air-gapped environments.
+            This project was part of my studies at ORT Tel Aviv College and was successfully submitted and evaluated by <b>MAHAT</b> (The Israeli Ministry of Labor and Social Affairs).
+            The system features the ability to display image statistics by registry, copy images between registries, and migrate images in <b>Kubernetes</b> while maintaining the
+            cluster's operational stability. As the team leader, I focused on ensuring full automation through advanced <b>CI/CD pipelines</b> (GitHub Actions) and comprehensive unit
+            testing. Originally designed for internal company use, this project is set to become an open-source solution, and I am proud to have contributed to its development
+            and to making it available to the broader community.</p>
+          <p><strong>Technologies used:</strong> Kubernetes, Helm, Python, PyTest, GitHub Action, Docker, YAML.</p>
+          <div class="technologies">
+            <img src="https://icon.icepanel.io/Technology/svg/Kubernetes.svg" alt="Kubernetes" title="Kubernetes">
+            <img src="https://icon.icepanel.io/Technology/svg/Helm.svg" alt="Helm" title="Helm">
+            <img src="https://icon.icepanel.io/Technology/svg/Python.svg" alt="Python" title="Python">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Pytest_logo.svg/600px-Pytest_logo.svg.png?20220319015434" alt="PyTest" title="PyTest">
+            <img src="https://icon.icepanel.io/Technology/svg/GitHub.svg" alt="GitHub Action" title="GitHub Action">
+            <img src="https://icon.icepanel.io/Technology/svg/Docker.svg" alt="Docker" title="Docker">
+            <img src="https://icon.icepanel.io/Technology/svg/YAML.svg" alt="YAML" title="YAML">
+          </div>
+          <a href="https://github.com/your-repo-link" target="_blank" class="btn-primary">View on GitHub</a>
+        </div>
+
         <!-- <div class="card">
           <h3>Docker Statistics</h3>
           <p>Tool for analyzing and managing Docker images.</p>
