--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="https://icon.icepanel.io/Technology/svg/Docker.svg" alt="Docker" title="Docker">
             <img src="https://icon.icepanel.io/Technology/svg/YAML.svg" alt="YAML" title="YAML">
           </div>
-          <a href="https://github.com/your-repo-link" target="_blank" class="btn-primary">View on GitHub</a>
+          <a href="https://github.com/YgalIdan/disko/tree/ygal" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
 
         <!-- <div class="card">
