--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ygal Idan - DevOps Engineer</title>
+  <link rel="icon" href="Photos/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header class="hero">
     <div class="container">
       <h1>Ygal Idan - Portfolio</h1>
-      <p>Aspiring DevOps Engineer with a solid foundation in cloud infrastructure, automation, and CI/CD processes acquired through
-        intensive coursework.
-        <br>Currently pursuing AWS Solution Architect certification as part of an advanced DevOps course, with
-        hands-on project experience in tools like Docker, Kubernetes, Jenkins, and Ansible.
-        <br>I am highly motivated to develop my skills further, contribute to innovative projects, and continuously learn and grow within the DevOps field.</p>
-        <div class="social-buttons">
-            <a href="https://www.github.com/YgalIdan" target="_blank" class="social-button github">GitHub</a>
-            <a href="https://www.linkedin.com/in/YgalIdan" target="_blank" class="social-button linkedin">LinkedIn</a>
-          </div>
+      <p>Aspiring DevOps Engineer with a solid foundation in cloud infrastructure, automation, and CI/CD processes acquired through intensive coursework.
+        <br>Currently pursuing AWS Solution Architect certification as part of an advanced DevOps course, with hands-on project experience in tools like Docker, Kubernetes, 
+            Jenkins, and Ansible.
+        <br>I am highly motivated to develop my skills further, contribute to innovative projects, and continuously learn and grow within the DevOps field.
+      </p>
+      <div class="social-buttons">
+        <a href="https://www.github.com/YgalIdan" target="_blank" class="social-button github">GitHub</a>
+        <a href="https://www.linkedin.com/in/YgalIdan" target="_blank" class="social-button linkedin">LinkedIn</a>
+      </div>
     </div>
   </header>
 
@@ -30,39 +33,47 @@
         <div class="card">
           <h3>Telegram Bot</h3>
           <p>This project showcases a <b>Telegram bot</b> capable of analyzing images sent to it.
-            Using the <b>YOLOv5 AI model</b>, the bot detects objects in the image and returns a list of identified objects to the user.
-            The project demonstrates advanced <b>DevOps</b> capabilities, including <b>infrastructure provisioning as code (IaC)</b> in <b>AWS</b> using <b>Terraform</b>.
-            The connection process is managed with <b>Ansible</b>, which connects to each <b>EC2 instance</b> and deploys the relevant <b>Docker container</b>,
+            Using the <b>YOLOv5 AI model</b>, the bot detects objects in the image and returns a list of identified
+            objects to the user.
+            The project demonstrates advanced <b>DevOps</b> capabilities, including <b>infrastructure provisioning as
+              code (IaC)</b> in <b>AWS</b> using <b>Terraform</b>.
+            The connection process is managed with <b>Ansible</b>, which connects to each <b>EC2 instance</b> and
+            deploys the relevant <b>Docker container</b>,
             whether it is the AI model or the <b>Telegram bot server</b>.</p>
           <p><strong>Technologies used:</strong> AWS, Terraform, Ansible, Docker, GitHub Action, Linux Command-Line.</p>
           <div class="technologies">
-            <img src="https://icon.icepanel.io/Technology/svg/AWS.svg" alt="AWS" title="AWS">
-            <img src="https://icon.icepanel.io/Technology/svg/HashiCorp-Terraform.svg" alt="Terraform" title="Terraform">
-            <img src="https://icon.icepanel.io/Technology/svg/Ansible.svg" alt="Ansible" title="Ansible">
-            <img src="https://icon.icepanel.io/Technology/svg/Docker.svg" alt="Docker" title="Docker">
-            <img src="https://icon.icepanel.io/Technology/svg/GitHub.svg" alt="GitHub Actions" title="GitHub Actions">
-            <img src="https://icon.icepanel.io/Technology/svg/Linux.svg" alt="Linux" title="Linux">
+            <img src="Photos/aws.svg" alt="AWS" title="AWS">
+            <img src="Photos/terraform.svg" alt="Terraform" title="Terraform">
+            <img src="Photos/ansible.svg" alt="Ansible" title="Ansible">
+            <img src="Photos/docker.svg" alt="Docker" title="Docker">
+            <img src="Photos/github.svg" alt="GitHub Actions" title="GitHub Actions">
+            <img src="Photos/linux.svg" alt="Linux" title="Linux">
           </div>
           <a href="https://github.com/YgalIdan/BotTelegram" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
-        
+
         <div class="card">
           <h3>Disko</h3>
-          <p>The <b>Disko Project</b>, developed in collaboration with <b>Octopus Computer Solutions</b>, provides an efficient solution for managing <b>Docker Images</b> in air-gapped environments.
-            This project was part of my studies at ORT Tel Aviv College and was successfully submitted and evaluated by <b>MAHAT</b> (The Israeli Ministry of Labor and Social Affairs).
-            The system features the ability to display image statistics by registry, copy images between registries, and migrate images in <b>Kubernetes</b> while maintaining the
-            cluster's operational stability. As the team leader, I focused on ensuring full automation through advanced <b>CI/CD pipelines</b> (GitHub Actions) and comprehensive unit
-            testing. Originally designed for internal company use, this project is set to become an open-source solution, and I am proud to have contributed to its development
+          <p>The <b>Disko Project</b>, developed in collaboration with <b>Octopus Computer Solutions</b>, provides an
+            efficient solution for managing <b>Docker Images</b> in air-gapped environments.
+            This project was part of my studies at ORT Tel Aviv College and was successfully submitted and evaluated by
+            <b>MAHAT</b> (The Israeli Ministry of Labor and Social Affairs).
+            The system features the ability to display image statistics by registry, copy images between registries, and
+            migrate images in <b>Kubernetes</b> while maintaining the
+            cluster's operational stability. As the team leader, I focused on ensuring full automation through advanced
+            <b>CI/CD pipelines</b> (GitHub Actions) and comprehensive unit
+            testing. Originally designed for internal company use, this project is set to become an open-source
+            solution, and I am proud to have contributed to its development
             and to making it available to the broader community.</p>
           <p><strong>Technologies used:</strong> Kubernetes, Helm, Python, PyTest, GitHub Action, Docker, YAML.</p>
           <div class="technologies">
-            <img src="https://icon.icepanel.io/Technology/svg/Kubernetes.svg" alt="Kubernetes" title="Kubernetes">
-            <img src="https://icon.icepanel.io/Technology/svg/Helm.svg" alt="Helm" title="Helm">
-            <img src="https://icon.icepanel.io/Technology/svg/Python.svg" alt="Python" title="Python">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Pytest_logo.svg/600px-Pytest_logo.svg.png?20220319015434" alt="PyTest" title="PyTest">
-            <img src="https://icon.icepanel.io/Technology/svg/GitHub.svg" alt="GitHub Action" title="GitHub Action">
-            <img src="https://icon.icepanel.io/Technology/svg/Docker.svg" alt="Docker" title="Docker">
-            <img src="https://icon.icepanel.io/Technology/svg/YAML.svg" alt="YAML" title="YAML">
+            <img src="Photos/kubernetes.svg" alt="Kubernetes" title="Kubernetes">
+            <img src="Photos/helm.svg" alt="Helm" title="Helm">
+            <img src="Photos/python.svg" alt="Python" title="Python">
+            <img src="Photos/pytest.svg" alt="PyTest" title="PyTest">
+            <img src="Photos/github.svg" alt="GitHub Action" title="GitHub Action">
+            <img src="Photos/docker.svg" alt="Docker" title="Docker">
+            <img src="Photos/YAML.svg" alt="YAML" title="YAML">
           </div>
           <a href="https://github.com/YgalIdan/disko/tree/ygal" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
@@ -81,14 +92,14 @@
     </section>
 
     <section id="resume" class="resume">
-        <center>
-            <h2>Resume</h2>
-            <div class="cv">
-                <img src="Ygal Idan CV.png" alt="CV" title="CV">
-            </div>
-            <br>
-            <a href="Ygal Idan CV.pdf" download class="btn-primary">Download my CV</a>
-        </center>
+      <center>
+        <h2>Resume</h2>
+        <div class="cv">
+          <img src="Ygal Idan CV.png" alt="CV" title="CV">
+        </div>
+        <br>
+        <a href="Ygal Idan CV.pdf" download class="btn-primary">Download my CV</a>
+      </center>
     </section>
   </main>
 
@@ -96,4 +107,5 @@
     <p>&copy; 2024 Ygal Idan. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
