--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
         </div>
 
         <div class="card">
+          <h3>Streaming (Netflix) Website</h3>
+          <p>In this project, I <b>developed</b> and <b>deployed</b> a <b>Netflix-style microservices application</b> using <b>Docker, Kubernetes, Jenkins</b>, and <b>ArgoCD</b>.
+            The project involved <b>containerizing microservices</b>, setting up a <b>CI/CD pipeline</b> for <b>automated deployments</b>, and implementing <b>GitOps practices</b>
+            with ArgoCD to manage continuous deployment. I utilized <b>Jenkins</b> to automate the <b>building</b> and <b>pushing of Docker images</b> to <b>DockerHub</b>, and
+            <b>Kubernetes</b> for <b>orchestration</b>. The goal was to create a fully <b>automated, scalable solution</b> for deploying and managing <b>microservices</b> in a 
+            <b>cloud-native environment</b>.</p>
+          <p><strong>Technologies used:</strong> GitHub, Jenkins, Docker, YAML, ArgoCD, Kubernetes.</p>
+          <div class="technologies">
+            <img src="Photos/GitHub.svg" alt="GitHub" title="GitHub">
+            <img src="Photos/Jenkins.svg" alt="Jenkins" title="Jenkins">
+            <img src="Photos/Docker.svg" alt="Docker" title="Docker">
+            <img src="Photos/YAML.svg" alt="YAML" title="YAML">
+            <img src="Photos/ArgoCD.svg" alt="ArgoCD" title="ArgoCD">
+            <img src="Photos/Kubernetes.svg" alt="Kubernetes" title="Kubernetes">
+          </div>
+          <a href="https://github.com/YgalIdan/NetflixInfra" target="_blank" class="btn-primary">View on GitHub</a>
+        </div>
+      </div>
+      <br>
+      <div class="grid">
+        <div class="card">
           <h3>Disko</h3>
           <p>The <b>Disko Project</b>, developed in collaboration with <b>Octopus Computer Solutions</b>, provides an
             efficient solution for managing <b>Docker Images</b> in air-gapped environments.
@@ -79,12 +100,11 @@
         </div>
 
         <!-- <div class="card">
-          <h3>Docker Statistics</h3>
-          <p>Tool for analyzing and managing Docker images.</p>
-          <p><strong>Technologies used:</strong> Python, Kubernetes</p>
+          <h3>Name of Project</h3>
+          <p>Description</p>
+          <p><strong>Technologies used:</strong> enter the tools.</p>
           <div class="technologies">
-            <img src="images/python-logo.png" alt="Python" title="Python">
-            <img src="images/kubernetes-logo.png" alt="Kubernetes" title="Kubernetes">
+            <img src="Photos/name-of-photo.svg" alt="Kubernetes" title="Kubernetes">
           </div>
           <a href="https://github.com/your-repo-link" target="_blank" class="btn-primary">View on GitHub</a>
         </div> -->
