--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <b>cloud-native environment</b>.</p>
           <p><strong>Technologies used:</strong> GitHub, Jenkins, Docker, YAML, ArgoCD, Kubernetes.</p>
           <div class="technologies">
-            <img src="Photos/GitHub.svg" alt="GitHub" title="GitHub">
+            <img src="Photos/github.svg" alt="GitHub" title="GitHub">
             <img src="Photos/Jenkins.svg" alt="Jenkins" title="Jenkins">
-            <img src="Photos/Docker.svg" alt="Docker" title="Docker">
+            <img src="Photos/docker.svg" alt="Docker" title="Docker">
             <img src="Photos/YAML.svg" alt="YAML" title="YAML">
             <img src="Photos/ArgoCD.svg" alt="ArgoCD" title="ArgoCD">
-            <img src="Photos/Kubernetes.svg" alt="Kubernetes" title="Kubernetes">
+            <img src="Photos/kubernetes.svg" alt="Kubernetes" title="Kubernetes">
           </div>
           <a href="https://github.com/YgalIdan/NetflixInfra" target="_blank" class="btn-primary">View on GitHub</a>
         </div>
